[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://WorlComplete.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/Ninja Note.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Bat.tscn" type="PackedScene" id=6]
[ext_resource path="res://MusicPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Dragon.tscn" type="PackedScene" id=8]
[ext_resource path="res://snowPlatform.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]

size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=2]

size = 15
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 11.648, 10 )

[sub_resource type="DynamicFont" id=4]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font" ]

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 160, 128 )

[node name="PauseMenu" parent="Player" index="3"]

visible = false

[node name="TileMap" parent="." index="1" instance=ExtResource( 3 )]

tile_data = PoolIntArray( 196611, 0, 196608, 196612, 0, 196609, 196613, 0, 196609, 196614, 0, 196609, 196615, 0, 196609, 196616, 0, 196610, 262173, 0, 1, 262174, 0, 2, 327694, 0, 196608, 327695, 0, 196609, 327696, 0, 196609, 327697, 0, 196609, 327698, 0, 196609, 327699, 0, 196609, 327700, 0, 196609, 327701, 0, 196609, 327702, 0, 196609, 327703, 0, 196610, 327708, 0, 1, 327709, 0, 65540, 327710, 0, 131074, 393242, 0, 196608, 393243, 0, 196609, 393244, 0, 65544, 393245, 0, 131072, 393246, 0, 65547, 393247, 0, 196609, 393248, 0, 196609, 393249, 0, 196609, 393250, 0, 196609, 393251, 0, 196610 )

[node name="WorlComplete" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 2143.61, 86.4377 )
scale = Vector2( -1.04688, 1 )
_sections_unfolded = [ "Transform" ]
next_scene = "World2.tscn"

[node name="Label" type="Label" parent="." index="3"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 192.0
margin_top = 32.0
margin_right = 352.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.949219, 0.0222473, 0.282958, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Pause", "custom_colors" ]

[node name="Coin_container" type="Node2D" parent="." index="4"]

_sections_unfolded = [ "Transform" ]

[node name="Coin_container2" type="Node2D" parent="." index="5"]

position = Vector2( 903.79, 69.4415 )
_sections_unfolded = [ "Transform" ]

[node name="Coin_container3" type="Node2D" parent="." index="6"]

position = Vector2( 1024, 320 )
_sections_unfolded = [ "Transform" ]

[node name="Coin_container4" type="Node2D" parent="." index="7"]

position = Vector2( 1728, 1248 )
scale = Vector2( 1.5, 1 )
_sections_unfolded = [ "Transform" ]

[node name="CoinCount" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 32.0
margin_right = 165.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "coin_count"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Bat" parent="." index="9" instance=ExtResource( 6 )]

position = Vector2( 581.29, 169.088 )

[node name="Bat2" parent="." index="10" instance=ExtResource( 6 )]

position = Vector2( 1376, 303.512 )

[node name="AudioStreamPlayer" parent="." index="11" instance=ExtResource( 7 )]

volume_db = -20.0

[node name="Shredder" type="Area2D" parent="." index="12"]

editor/display_folded = true
position = Vector2( 0, 1200 )
scale = Vector2( 500, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shredder" index="0"]

shape = SubResource( 3 )

[node name="Dragon" parent="." index="13" instance=ExtResource( 8 )]

position = Vector2( 896, 320 )

[node name="PauseMenu" type="VBoxContainer" parent="." index="14"]

pause_mode = 2
editor/display_folded = true
visible = false
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Pause", "Visibility" ]

[node name="Label" type="Label" parent="PauseMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 274.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.636719, 0.0397949, 0.0397949, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "PAUSED"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Button" type="Button" parent="PauseMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 274.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.628906, 0.0958099, 0.0958099, 1 )
custom_colors/font_color = Color( 0.803654, 0.847656, 0.043045, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.787124, 0.847656, 0.0728455, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "RESUME"
flat = false
align = 1
_sections_unfolded = [ "custom_colors" ]

[node name="SnowPlatform" type="Node2D" parent="." index="15"]

editor/display_folded = true
position = Vector2( 2080, 352 )
__meta__ = {
"_edit_group_": true
}

[node name="KinematicBody2D" parent="SnowPlatform" index="0" instance=ExtResource( 9 )]

position = Vector2( -32, 0 )
motion = Vector2( 0, 200 )

[node name="SnowPlatform2" type="Node2D" parent="." index="16"]

position = Vector2( 576, 320 )
__meta__ = {
"_edit_group_": true
}

[node name="KinematicBody2D" parent="SnowPlatform2" index="0" instance=ExtResource( 9 )]

position = Vector2( 0, 0 )

[connection signal="body_entered" from="Shredder" to="Player" method="_on_Shredder_body_entered"]


[editable path="Player"]
